Fixed 15 minutes problem

--- a/.gitignore/config.json
+++ b/.gitignore/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTE1NDgxOTg2MDMwNDUwNjk1Mw.GinZje.cRUxtxuWEZ2cXUewVv22dRdoAYzuty24RjfGog",
+    "token": "MTE1NDgxOTg2MDMwNDUwNjk1Mw.GjVz4m.xEIx1Hup1TMenYZU-39rWrla7b-rv1-ulzMngY",
     "clientId": "1154819860304506953",
 	"guildId": "917051994865287198"
 }
