--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTE1NDgxOTg2MDMwNDUwNjk1Mw.GuNuM9.wUzk5MDYVfE-mRwS-eHEZpq4VzZ2yHSGaLgt6w",
+    "token": "MTE1NDgxOTg2MDMwNDUwNjk1Mw.GheBpw.tywThzYIMbMexWN7Zvr9qvVbrKSSh84r-r-GYM",
     "clientId": "1154819860304506953",
 	"guildId": "917051994865287198"
 }
